--- a/gamesAPI/client/src/styles/allgames.css
+++ b/gamesAPI/client/src/styles/allgames.css
@@ -23,6 +23,21 @@
 
 }
 
+.info input {
+
+    width: 15%;
+    height: 20px;
+
+    padding: 8px;
+    margin: 8px 0;
+
+    border: 0;
+    outline: 0;
+
+    border-radius: 20px;
+
+}
+
 button {
 
     width: 10%;
@@ -52,12 +67,20 @@ button {
 
 }
 
+.holder {
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
 .game {
 
     display: flex;
     flex-direction: column;
 
-    width: 60%;
+    width: 70%;
 
     padding: 12px 2%;
     margin: 12px 0;
@@ -67,3 +90,10 @@ button {
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.37);
 
 }
+
+.game p {
+
+    margin: 8px 0;
+
+}
+
