--- a/gamesAPI/client/src/styles/home.css
+++ b/gamesAPI/client/src/styles/home.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500&display=swap');
+
 * {
 
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Roboto;
 
 }
 
@@ -11,3 +14,46 @@ body {
     background: rgb(46, 46, 46);
 
 }
+
+header {
+
+    padding: 15px;
+
+    background: rgb(27, 27, 27);
+    color: white;
+
+}
+
+header h1 {
+
+    font-weight: normal;
+    font-size: 1.4em;
+
+}
+
+header strong {
+
+    font-weight: normal;
+    border-bottom: 1px solid white;
+
+}
+
+main section.apiinfo {
+
+    padding: 10px;
+    color: white;
+
+}
+
+main section.apiinfo h2 {
+
+    font-weight: normal;
+
+}
+
+main section.apiinfo strong {
+
+    color: orange;
+
+}
+
